fix of overflow of planets section

--- a/src/app/home/css/main.module.css
+++ b/src/app/home/css/main.module.css
@@ -9,7 +9,7 @@
     justify-content: center;
     position: relative;
     /* z-index: 0; */
-    overflow-y: hidden;
+    overflow: hidden;
   }
   .canvasContainer{
     position: absolute !important;
